# talpa

./: .gitignore  CLAUDE.md  CODESTYLE.md  Cargo.toml  LICENSE  README.md  build.rs  config.example.toml  config.example.yml
.github/workflows/: release.yml
assets/: README.md
scripts/: make-icns.sh  release.sh
src/: config.rs  main.rs  paths.rs  update.rs
src/core/: dns.rs  matcher.rs  mod.rs  proxy_service.rs  socks5.rs  system_proxy.rs  tunnel.rs
src/core/dns/: forwarder.rs  handler.rs  mod.rs  utils.rs
src/core/socks/: mod.rs
src/core/tunnel/: mod.rs
src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
src/ui/: controller.rs  mod.rs  tray.rs
src/ui/macos/: dialogs.rs  menubar.rs  mod.rs
src/utils/: config_helpers.rs  icons.rs  mod.rs  updater.rs
