[package]
name = "talpa"
version = "1.0.0"
edition = "2021"

[package.metadata.bundle]
name = "Talpa"
identifier = "com.talpa.proxy"
icon = ["assets/AppIcon.icns"]
version = "0.1.0"
category = "public.app-category.utilities"
short_description = "Routes traffic for specific domains through an SSH tunnel"
osx_minimum_system_version = "12.0"

[[bin]]
name = "talpa"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tray-icon = "0.19"
winit = "0.30"
ipnet = "2"
