[package]
name = "talpa"
version = "2.0.1"
edition = "2024"
repository = "https://github.com/Emingy/talpa"

[dependencies]
tokio = { version = "1.52.3", features = ["full"] }
hickory-server = "0.26.1"
hickory-proto = "0.26.1"
hickory-resolver = "0.26.1"
anyhow = "1.0.102"
async-trait = "0.1.89"
tokio-util = { version = "0.7", features = ["rt"] }
tokio-socks = "0.5"
ipstack = "0"
tun = { version = "0.8.10", features = ["async"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tray-icon = { version = "0.19", default-features = false }
tao = "0.30"
log = "0.4"
simplelog = "0.12"
ureq = { version = "2", features = ["json"] }
serde_json = "1"

[build-dependencies]
winresource = "0.1"
toml = "0.8"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[package.metadata.bundle]
name = "Talpa"
identifier = "com.emingy.talpa"
icon = ["assets/AppIcon.icns"]

